Updated test case path.

--- a/.github/workflows/verify-workflow.yaml
+++ b/.github/workflows/verify-workflow.yaml
@@ -23,7 +23,7 @@ jobs:
     strategy:
       matrix:
         testcase:
-          - azure-vpc
+          - azure_vpc
         enabled:
           - true
       fail-fast: false
